adding user contribution api